# drakeify

./: .dockerignore  .gitignore  ARCHITECTURE.md  Cargo.toml  Dockerfile  Dockerfile.web  FUTURE.md  PLUGIN_MANAGEMENT.md  README.md  TOOLS.md  docker-compose.yml  drakeify.toml.example  run_integration_tests.sh  test_ha_garage_lights.sh  test_ha_list.sh  test_home_assistant.sh
.gitea/workflows/: build.yaml
data/plugins/: stream_monitor.js  system_prompt_builder.js
data/tools/: http_test.js
docs/: WEB_UI.md
examples/example-plugin/: plugin.js
examples/plugins/: account_id_test.js  hallucination_corrector.js  http_logger.js  system_prompt_builder.js  tool_router.js  tool_router.md  webhook_test.js  zulip.js
examples/plugins/example-plugin/: README.md
examples/tools/: README.md  clear_session.js  document_store_test.js  get_account_info.js  http_get.js  memory.js  schedule_task.js  weather.js  zulip_bundle.js
examples/tools/zulip/: tool.js
migrations/postgres/: 20260224_initial_schema.sql  20260227_sessions.sql  202603081_documents.sql  202603082_llm_configs.sql  202603083_add_llm_account_id.sql  202603084_add_llm_account_id.sql  20260308_scheduled_jobs.sql  20260309_initial_schema.sql
migrations/sqlite/: 20260224_initial_schema.sql  20260227_sessions.sql  202603081_documents.sql  202603082_llm_configs.sql  20260308_placeholder.sql  20260309_initial_schema.sql
plugins/: context_pruner.js  conversation_logger.js  hallucination_corrector.js
src/: database.rs  js_runtime.rs  lib.rs  llm.rs  llm_config_manager.rs  main.rs  plugins.rs  proxy.rs  registry.rs  scheduler.rs  session.rs  tools.rs
src/client_tools/: package_manager.json
static/: index.html
static/css/: styles.css
static/js/: app.js  llm-configs.js  plugins.js  sessions.js  tools.js  utils.js
tests/: README.md  proxy_integration_test.rs
tools/: README.md  filesystem_list.js  search_duckduckgo.js
