[package]
name = "drakeify"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "drakeify"
path = "src/bin/drakeify.rs"

[[bin]]
name = "drakeify-cli"
path = "src/bin/drakeify-cli.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
tokio-stream = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
confy = "2.0.0"
futures-util = "0.3"
anyhow = "1.0.101"
colored = "3.1.1"
rquickjs = "0.11.0"
url = "2.5"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
hyper = "1.0"
# OCI registry support for plugin/tool management
oci-distribution = { version = "0.11", default-features = false, features = ["rustls-tls"] }
sha2 = "0.10"
tar = "0.4"
flate2 = "1.0"
semver = "1.0"
clap = { version = "4.5", features = ["derive"] }
regex = "1.10"
# Database support - SQLite by default, PostgreSQL optional
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "postgres", "migrate", "chrono"] }
base64 = "0.22.1"


